8202747: C2: assert(mode == ControlAroundStripMined && use == sfpt) failed: missed a node

Reviewed-by: neliasso, kvn